# ini-rs

./: Cargo.toml  LICENSE  readme.md  test.ini
.github/workflows/: rust.yml
src/: lib.rs
