[package]
name = "ini-rs"
version = "0.1.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/DawsonThePagan/ini-rs"
readme = "readme.md"
keywords = ["config", "file"]
categories = ["config", "filesystem"]
description = "Read and write INI files with funcions. Also allows direct access to INI data"

[dependencies]
read_lines_with_blank = "0.1.0"
